Overlapping the heading and scroll in logs component fixed

--- a/src/app/modules/model-version/containers/model-version-details/model-version-details.component.scss
+++ b/src/app/modules/model-version/containers/model-version-details/model-version-details.component.scss
@@ -257,7 +257,7 @@
 }
 
 .log {
-  top: 48px;
+  top: 72px;
   left: 0px;
   position: fixed;
   right: 0;
